@@ -1,11 +1,11 @@
 # Makefile.am for bin/cnid/
 
-EXTRA_DIST = cnid_maint.in cnid2_create.in
+EXTRA_DIST = cnid2_create.in
 noinst_HEADERS = ad.h
 
 if USE_BDB
 bin_PROGRAMS = ad
-bin_SCRIPTS = cnid_maint cnid2_create
+bin_SCRIPTS = cnid2_create
 
 ad_SOURCES = ad.c ad_util.c \
 	ad_ls.c \
