@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.231 2009-11-25 10:09:02 didg Exp $
+dnl $Id: configure.in,v 1.232 2009-11-26 11:09:08 franklahm Exp $
 dnl configure.in for netatalk
 
 AC_INIT(etc/afpd/main.c)
@@ -1197,7 +1197,6 @@ AC_OUTPUT([Makefile
 	bin/afile/Makefile
 	bin/afppasswd/Makefile
 	bin/cnid/Makefile
-	bin/cnid/cnid_maint
 	bin/cnid/cnid2_create
 	bin/getzones/Makefile
 	bin/megatron/Makefile
@@ -1220,7 +1219,6 @@ AC_OUTPUT([Makefile
 	contrib/shell_utils/apple_cp
 	contrib/shell_utils/apple_mv
 	contrib/shell_utils/apple_rm
-	contrib/shell_utils/apple_cleanup
 	contrib/shell_utils/asip-status.pl
 	contrib/timelord/Makefile
 	contrib/a2boot/Makefile
